--- a/src/templates/style/grids-sass-import.scss.hbs
+++ b/src/templates/style/grids-sass-import.scss.hbs
@@ -6,4 +6,4 @@ $nth-grid-{{@key}}: {{this}};
 {{/each}}
 
 {{!-- Styles --}}
-{{> grid.scss parentSelector=".sass"}}
+{{> grid.scss parentSelector=".sass-import"}}
