--- a/demo/grids-sass-use.scss
+++ b/demo/grids-sass-use.scss
@@ -1,338 +1,378 @@
-@import "stylus/_nth-grid";
+@use "sass/_nth-grid" as * with (
+  $nth-grid-direction: ltr,
+  $nth-grid-flex: true,
+  $nth-grid-flex-legacy: true,
+  $nth-grid-float: true,
+  $nth-grid-float-legacy: true,
+  $nth-grid-overlay: false,
+  $nth-grid-debug: false,
+  $nth-grid-warnings: false
+);
 
-$nth-grid-direction = ltr;
-$nth-grid-flex = true;
-$nth-grid-flex-legacy = true;
-$nth-grid-float = true;
-$nth-grid-float-legacy = true;
-$nth-grid-overlay = false;
-$nth-grid-debug = false;
-$nth-grid-warnings = false;
-
-.stylus .grid-nocalc-singleratio
-    nth-grid(
+.sass-use .grid-nocalc-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-singleratio-nogap
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-singleratio-nogap {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0,
         $margin: 1%
-    )
-.stylus .grid-nocalc-singleratio-nomargin
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-singleratio-nomargin {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 1%,
         $margin: 0
-    )
-.stylus .grid-nocalc-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 2 3,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-fixed
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3rem 4rem 5rem,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-nocalc-fixed-first-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-first-singleratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 5rem 2,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fixed-last-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-last-singleratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 2 5rem,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fixed-first-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-first-multiratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 5rem 1 2,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fixed-middle-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-middle-multiratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 1 5rem 2,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fixed-last-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-last-multiratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 1 2 5rem,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fixed-firstlast-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fixed-firstlast-singleratio {
+    @include nth-grid(
         
         $order: false,
         $columns: 2.5rem 1 2.5rem,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $width: 14rem
-    )
-.stylus .grid-nocalc-fluid-first-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fluid-first-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 10% 2,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-fluid-last-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fluid-last-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 2 10%,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-fluid-first-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fluid-first-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 10% 1 2,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-fluid-middle-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fluid-middle-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 10% 2,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-fluid-last-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-fluid-last-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 2 10%,
         $gap: 1%,
         $margin: 1%
-    )
-.stylus .grid-nocalc-order
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-order {
+    @include nth-grid(
         $width: 95%,
         
         $columns: 3,
         $gap: 1%,
         $margin: 1%,
         $order: 2 3 1
-    )
-.stylus .grid-nocalc-rtl
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-rtl {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 1%,
         $margin: 1%,
         $direction: rtl
-    )
-.stylus .grid-nocalc-nested
-    nth-grid(
+    );
+}
+.sass-use .grid-nocalc-nested {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 1%,
         $margin: 1%
-    )
-    .grid-n
-        nth-grid(
+    );
+    .grid-n {
+        @include nth-grid(
             $order: false,
             $columns: 1 2 3,
             $gap: 1%
-        )
-.stylus .grid-calc-singleratio
-    nth-grid(
+        );
+    }
+}
+.sass-use .grid-calc-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-singleratio-nogap
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-singleratio-nogap {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-singleratio-nomargin
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-singleratio-nomargin {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0.5rem,
         $margin: 0
-    )
-.stylus .grid-calc-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 2 3,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 48px 64px 80px,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-first-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-first-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 100px 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-last-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-last-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 2 100px,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-first-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-first-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 100px 1 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-middle-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-middle-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 100px 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-last-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-last-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 2 100px,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fixed-firstlast-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fixed-firstlast-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 100px 1 100px,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fluid-first-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fluid-first-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 10% 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fluid-last-singleratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fluid-last-singleratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 2 10%,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fluid-first-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fluid-first-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 10% 1 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fluid-middle-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fluid-middle-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 10% 2,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-fluid-last-multiratio
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-fluid-last-multiratio {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 1 2 10%,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-.stylus .grid-calc-order
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-order {
+    @include nth-grid(
         $width: 95%,
         
         $columns: 3,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $order: 2 3 1
-    )
-.stylus .grid-calc-rtl
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-rtl {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0.5rem,
         $margin: 0.5rem,
         $direction: rtl
-    )
-.stylus .grid-calc-nested
-    nth-grid(
+    );
+}
+.sass-use .grid-calc-nested {
+    @include nth-grid(
         $width: 95%,
         $order: false,
         $columns: 3,
         $gap: 0.5rem,
         $margin: 0.5rem
-    )
-    .grid-n
-        nth-grid(
+    );
+    .grid-n {
+        @include nth-grid(
             $order: false,
             $columns: 3,
             $gap: 0.5rem,
             $margin: 0
-        )
+        );
+    }
+}
