--- a/src/demo/sass/main.scss
+++ b/src/demo/sass/main.scss
@@ -1,9 +1,3 @@
-// Imports
-// =============================================================================
-@import "nav";
-@import "sass/nth-grid";
-
-
 // Variables
 // =============================================================================
 // Elements
@@ -12,11 +6,12 @@ $text-color: #000;
 
 // Vendor
 $vendor-color-map: (
-    compare: #333,
-    less   : #466DA9,
-    postcss: #dd3735,
-    sass   : #c6538c,
-    stylus : #ff6347
+    compare    : #333,
+    less       : #466DA9,
+    postcss    : #dd3735,
+    sass-import: #c6538c,
+    sass-use   : #c6538c,
+    stylus     : #ff6347
 );
 
 // Layout
@@ -28,46 +23,26 @@ $time-medium: 0.5s;
 $time-slow  : 1s;
 
 // Typography
-$line-height       : 1.4;
+$line-height: 1.4;
 
 // Font Families
 $font-family-sans : sans-serif;
 $font-family-serif: serif;
 
 // Font Size
-$font-small  : 11px;
-$font-medium : 16px;
-$font-large  : 20px;
+$font-small : 11px;
+$font-medium: 16px;
+$font-large : 20px;
 
-// Components
-// -----------------------------------------------------------------------------
-// Nav
-// $_nav-id                       : 'nav-toggle';
-// $_nav-elm                      : 'ul';
-// $_nav-bar-autohide             : false;
-// $_nav-bar-background           : #fff;
-$_nav-bar-height               : 5rem;
-$_nav-bar-padding              : $space-fixed;
-// $_nav-drawer-blur              : false;
-// $_nav-drawer-breakpoint        : 48rem;
-// $_nav-drawer-width             : 15rem;
-// $_nav-icon-background          : transparent;
-// $_nav-icon-background-active   : $_nav-icon-background;
-// $_nav-icon-border              : 0;
-// $_nav-icon-border-active       : $_nav-icon-border;
-// $_nav-icon-border-radius       : 0;
-// $_nav-icon-border-radius-active: $_nav-icon-border-radius;
-// $_nav-icon-color               : #000;
-// $_nav-icon-color-active        : $_nav-icon-color;
-// $_nav-icon-padding             : 0;
-// $_nav-icon-size                : 24px;
-// $_nav-icon-transition-duration : 0.2s;
-// $_nav-label-autohide           : true;
-// $_nav-location                 : right;
-// $_nav-overlay-color            : #000;
-// $_nav-overlay-opacity          : 0.5;
-// $_nav-transition-duration      : 0.5s;
-// $_nav-z-index                  : 2147483646;
+
+// Modules
+// =============================================================================
+@use "sass:color";
+@use "nav" with (
+    $bar-height : 5rem,
+    $bar-padding: $space-fixed
+);
+@use "sass/nth-grid" as *;
 
 
 // Base
@@ -84,7 +59,7 @@ a {
 }
 
 body {
-    padding-top: $_nav-bar-height;
+    padding-top: nav.$bar-height;
     background: $body-bg;
     font-family: $font-family-sans;
     font-size: $font-medium;
@@ -131,6 +106,13 @@ nav {
                 color: $color;
                 border-color: $color;
             }
+        }
+
+        code {
+            padding: 0.2em  0.35em;
+            border-radius: 4px;
+            background: rgba(0, 0, 0, 0.075);
+            font-size: 90%;
         }
     }
 }
@@ -189,7 +171,7 @@ section {
     @each $name, $color in $vendor-color-map {
         section.#{$name} &,
         section.#{$name} & & {
-            background-color: desaturate(lighten($color, 20), 5) !important;
+            background-color: color.adjust(color.adjust($color, $lightness: 20%), $saturation: -5%) !important;
 
             > * {
                 background: $color !important;
@@ -207,8 +189,8 @@ section {
 .compare {
     main {
         @include nth-grid(
-            $columns: 4,
-            $gap    : 2%
+            $columns: 5,
+            $gap    : 1%
         );
 
         h2 {
